image not loaded if SRC URL has a leading SPACE character. bug 117410 r=bbaetz sr=darin a=asa